Tue May 27 03:43:03 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/snipper.h: Add missing doxygen comments.

Tue May 27 03:41:08 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/snipper.h,tests/api_snipper.cc: Whitespace tweaks.

Tue May 27 03:36:19 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc,include/xapian/snipper.h,tests/api_snipper.cc: Remove
	  getters for obtaining info about the relevance model, and instead
	  add a get_description() method which includes all such info in the
	  returned description.

Tue May 27 03:06:36 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc: Use an iterator instead of subscripting.

Tue May 27 03:03:33 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc,api/snipperinternal.h,include/xapian/snipper.h: Use
	  appropriate named types rather than "int" or "unsigned int".

Tue May 27 03:02:48 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipperinternal.h: Remove constants which are no longer used.

Tue May 27 02:48:44 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc,api/snipperinternal.h,include/xapian/snipper.h:
	  Rework Snipper methods set_smoothing_coef() and set_window_size() as
	  optional parameters of generate_snippet().

Tue May 27 02:33:39 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc,api/snipperinternal.h: Just pass rm_docno through to
	  Snipper::Internal::calculate_rm() as a parameter rather than storing
	  it in a member variable.

Tue May 27 02:25:41 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc: Use clear() method to empty a container.

Tue May 27 02:22:37 GMT 2014  Olly Betts <olly@survex.com>

	* tests/api_snipper.cc: Drop unused <algorithm>.

Tue May 27 02:21:53 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc: Eliminate ret_value variable.

Tue May 27 02:20:25 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc: Avoid unnecessary substr operations.

Tue May 27 02:17:32 GMT 2014  Olly Betts <olly@survex.com>
