@@ -1,5 +1,5 @@
 #!/usr/bin/perl -w
-# Copyright (C) 2007,2009 Olly Betts
+my $copyright = 'Copyright (C) 2007,2009,2012,2014 Olly Betts';
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
@@ -56,6 +56,7 @@ my %copyableclasses = (
     'Registry' => '',
     'RSet' => '',
     'SimpleStopper' => '',
+    'Snipper' => '',
     'Stem' => '',
     'StringValueRangeProcessor' => '0',
     'TermGenerator' => '',
@@ -87,8 +88,8 @@ print <<'END';
  */
 END
 print $generated_warning;
-print <<'END';
-/* Copyright (C) 2007,2009,2012 Olly Betts
+print <<"END";
+/* $copyright
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
